--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body {
   white-space: pre-wrap;
 }
 
-.home-container, .login-container, .register-container {
+.home-container, .login-container, .register-container, .spin-container {
   display: flex;
   flex-direction: column;
   align-items: center;
