--- a/src/App.css
+++ b/src/App.css
@@ -200,10 +200,10 @@ body {
   position: sticky;
   top: 0px;
   z-index: 1;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  /* width: 100%; */
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: space-between; */
   background: linear-gradient(45deg, black, white);
 }
 
