--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,14 @@ body {
   justify-content: center;
 }
 
+.body-container {
+  display: flex;
+  flex-direction: column;
+  font-size: 16pt;
+  align-items: center;
+  justify-content: center;
+}
+
 .recipe-details-container {
   display: flex;
   flex-direction: column;
@@ -146,7 +154,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 260px;
+  padding-top: 25px;
 }
 
 .input-container {
