--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -49,7 +50,10 @@ body {
   white-space: pre-wrap;
 }
 
-.home-container, .login-container, .register-container, .spin-container {
+.home-container,
+.login-container,
+.register-container,
+.spin-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -57,7 +61,8 @@ body {
   min-height: 100vh;
 }
 
-.details-container, .submit-new-container {
+.details-container,
+.submit-new-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -65,7 +70,8 @@ body {
   gap: 1rem;
 }
 
-.login-form, .register-form {
+.login-form,
+.register-form {
   display: flex;
   flex-direction: column;
   padding: 6% 8%;
@@ -96,11 +102,14 @@ body {
   gap: 1rem;
 }
 
-.app-title {
-  font-size: 1.125rem;
-  font-style: italic;
-  font-weight: bold;
-  color: white;
+@media screen and (max-width: 600px) {
+  .app-title {
+    font-size: 1.125rem;
+    font-style: italic;
+    font-weight: bold;
+    color: white;
+    display: none;
+  }
 }
 
 .user-menu {
@@ -132,7 +141,8 @@ body {
   border: 1px solid black;
 }
 
-.result-container, .history-item {
+.result-container,
+.history-item {
   flex-direction: row;
   display: flex;
   width: 400px;
@@ -164,7 +174,7 @@ body {
   justify-content: center;
 }
 
-.input-container > .error-label {
+.input-container>.error-label {
   color: red;
   font-size: 12px;
 }
