--- a/src/App.css
+++ b/src/App.css
@@ -201,8 +201,16 @@ body {
   font-weight: 500;
 }
 
-.search-input {
-  max-width: 200px;
+@media screen and (max-width: 600px) {
+  .search-input {
+    max-width: 150px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .search-input {
+    max-width: 200px;
+  }
 }
 
 .app-layout-container {
